src/objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>Aprobacion__c</fullName>
        <description>prueba para mostrar imagen en lineas que requieran aprobación</description>
        <formula>IF( Requiere_Aprobacion_Manager_Comercial__c ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0150m000000QnRp&quot;,&quot;Requiere Aprobación Manager Comercial&quot;, 20, 20) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aprobación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carga_Media__c</fullName>
        <formula>IF( ISBLANK( SBQQ__ProductOption__c ) , SBQQ__Quote__r.Carga_Media__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carga Media</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comision_Monto__c</fullName>
        <label>Comisión ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comision__c</fullName>
        <label>Comisión (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Configured_SKU_Product_Code__c</fullName>
        <label>Configured SKU Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descuento_Calculado__c</fullName>
        <label>Descuento Calculado</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dias_de_Credito__c</fullName>
        <label>Días de Crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_Run_Price_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No se debe mostrar en pantalla. Sirve para que la price rule de COmision solo la escriba cuando se carga por primera vez el valor y luego deje al usuario cambiarla. La Price Rule no se ejecutará si el check esta marcado.</description>
        <label>Do Not Run Price Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>CASE( SBQQ__Quote__r.SBQQ__Opportunity2__r.RecordType.DeveloperName , 



&apos;Merchant&apos;, &apos;Line_Editor_Merchants&apos;,

&apos;SBQQ__LineEditor&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Define el set de campos en Line Editor segun el tipo de registro de la Oportunidad</inlineHelpText>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>CASE( TEXT (SBQQ__Product__r.Rate_Type__c ) ,

&quot;$&quot;, &quot;$&quot;,
&quot;Porcentaje&quot;, &quot;%&quot;,
&quot;Cantidad&quot;, &quot;#&quot;,

&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$/%</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frecuencia__c</fullName>
        <label>Frecuencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recurrente</fullName>
                </value>
                <value>
                    <fullName>NoRecurrente</fullName>
                </value>
                <value>
                    <fullName>OneShot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_de_Reembolsos__c</fullName>
        <inlineHelpText>representa la frecuencia en días (cada n días) que puede solicitarse un reembolso por parte del Merchant</inlineHelpText>
        <label>Frecuencia de Reembolsos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Adicional__c</fullName>
        <formula>CASE( SBQQ__ProductCode__c , 

&quot;FREC_REEMB&quot;,  &apos;Cada &apos; + TEXT(Frecuencia_de_Reembolsos__c) + &apos; &apos; + TEXT(SBQQ__Product__r.Rate_Type__c)  , 
&quot;SOPORTE&quot;, TEXT( Soporte__c ),
&quot;MET_REEMB&quot;, TEXT(  Metodo_de_Reembolso__c  ),

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info Adicional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineaCotizacionMerchant__c</fullName>
        <formula>CASE( Field2__c , 

&apos;%&apos;,  text(Precio_Negociado__c) +&apos;%&apos; , 
&apos;$&apos;,   &apos;S/ &apos; + text(SBQQ__NetTotal__c)  , 

 Info_Adicional__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LineaCotizacionMerchant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metodo_de_Reembolso__c</fullName>
        <label>Método de Reembolso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Metodo_de_Reembolso</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_de_Beneficiarios__c</fullName>
        <label>Nº de Beneficiarios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Estandar__c</fullName>
        <label>Precio Estándar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Minimo_Sin_Aprobacion__c</fullName>
        <description>No se requiere mostrar en pantalla, se usa para criterios de Aprobación</description>
        <inlineHelpText>Guarda desde Tabla de Precios el valor mínimo sin requerir Aprobación Manager Comercial.</inlineHelpText>
        <label>Precio Minimo Sin Aprobación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Negociado__c</fullName>
        <label>Precio Negociado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCode_Field__c</fullName>
        <description>Utilizado para poder usar en campo de resumen y evaluar criterios de entrada a proceso de aprobación. Este campo se llena en Process Builder del Quite Line. No se requiere mostrar en pantalla.</description>
        <label>ProductCode Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option_Name__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Option Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requiere_Aprobacion_Manager_Comercial__c</fullName>
        <formula>Precio_Negociado__c &lt;  Precio_Minimo_Sin_Aprobacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indica si el Precio Negociado está por debajo del minimo definido para no requerir aprobación Manager Comercial, lo que se usa para los criterios de Aprobación</inlineHelpText>
        <label>Requiere Aprobación Manager Comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AllowAssetRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the underlying asset may have its quantity refunded. Only relevant for Amendments.</description>
        <inlineHelpText>Indicates whether the asset represented by this line may be refunded.</inlineHelpText>
        <label>Allow Asset Refunds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch, defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</description>
        <inlineHelpText>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CarryoverLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this line as an auto-mapped option on an Upgraded Bundle.</description>
        <inlineHelpText>Denotes this line as an auto-selected option of an upgrade bundle.</inlineHelpText>
        <label>Carry-Over Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCost__c</fullName>
        <description>Total cost of components in this package.</description>
        <inlineHelpText>Total cost of components in this package.</inlineHelpText>
        <label>Component Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentListTotal__c</fullName>
        <description>List total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>List total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component List Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <label>Package &amp; Components</label>
                </value>
                <value>
                    <fullName>Entire Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentTotal__c</fullName>
        <description>Sum total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Sum total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentUpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</description>
        <inlineHelpText>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</inlineHelpText>
        <label>Component Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentVisibility__c</fullName>
        <description>Visibility of this component line item.</description>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__QuoteLineVisibility__c)</formula>
        <inlineHelpText>Indicates the visibility of the component line item.</inlineHelpText>
        <label>Component Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity (historic).</description>
        <inlineHelpText>Discount rate compounded by quantity (historic).</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</description>
        <inlineHelpText>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</inlineHelpText>
        <label>Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracted price if the product has negotiated pricing for opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</description>
        <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether cost can be edited on this line item.</description>
        <inlineHelpText>Specifies whether cost can be edited on this line item.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cost record for this line item.</description>
        <inlineHelpText>Cost record for this line item.</inlineHelpText>
        <label>Cost</label>
        <referenceTo>SBQQ__Cost__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</description>
        <inlineHelpText>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</inlineHelpText>
        <label>Customer Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</description>
        <formula>IF(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), 0, SBQQ__CustomerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</inlineHelpText>
        <label>Customer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this line item.</description>
        <inlineHelpText>Description for this line item.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</description>
        <inlineHelpText>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>R00N70000001opkuEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount tier used by this line item. This field is only populated if a product is volume discounted and discount schedule is of type &quot;Range&quot;.</description>
        <inlineHelpText>Discount tier used by this line item. This field is only populated if a volume discount was applied and the discount schedule is of type &quot;Range&quot;.</inlineHelpText>
        <label>Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines (Volume Discounted)</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional customer discount extended for this line item expressed in terms of percentage.</description>
        <inlineHelpText>Additional customer discount extended to this line item expressed in form of a percentage.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>This is a discount that is applied to partner price and reflected in the net price.</description>
        <inlineHelpText>This is a discount that is applied to partner price and reflected in the net price.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EarliestValidAmendmentStartDate__c</fullName>
        <description>The earliest safe date for an amendment quote line to start before it becomes back-dated and therefore forbidden.</description>
        <inlineHelpText>The earliest valid start date for this amendment quote line.</inlineHelpText>
        <label>Earliest Valid Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveEndDate__c</fullName>
        <description>Effective end date for this subscription.</description>
        <formula>IF(ISPICKVAL(SBQQ__SubscriptionType__c, &quot;Evergreen&quot;), null,
    IF(ISBLANK(SBQQ__EndDate__c),
        IF(ISBLANK(SBQQ__Group__r.SBQQ__EndDate__c),SBQQ__Quote__r.SBQQ__EndDate__c,SBQQ__Group__r.SBQQ__EndDate__c),SBQQ__EndDate__c)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective end date for this subscription.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveQuantity__c</fullName>
        <description>Effective quantity used in computing totals. Same as quantity unless the product is block priced, covered by &quot;Slab&quot; discount schedule, or an existing subscription.</description>
        <formula>IF(OR(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;),ISPICKVAL(SBQQ__PricingMethod__c, &apos;Block&apos;)),IF(OR(AND(!SBQQ__Existing__c, !SBQQ__CarryoverLine__c, SBQQ__Quantity__c == 0),AND(OR(SBQQ__Existing__c, SBQQ__CarryoverLine__c),OR(SBQQ__Quantity__c == SBQQ__PriorQuantity__c - SBQQ__UpgradedQuantity__c,AND(!SBQQ__AllowAssetRefund__c, ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Quantity__c &lt; SBQQ__PriorQuantity__c - SBQQ__UpgradedQuantity__c)))),0,1),IF(AND(!SBQQ__Existing__c, !SBQQ__CarryoverLine__c),SBQQ__Quantity__c,IF(SBQQ__Quantity__c &gt;= SBQQ__PriorQuantity__c - SBQQ__UpgradedQuantity__c,IF(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;Percent Of Total&apos;),SBQQ__Quantity__c,SBQQ__Quantity__c - SBQQ__PriorQuantity__c + SBQQ__UpgradedQuantity__c),IF(AND(!SBQQ__AllowAssetRefund__c, ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;)),0,SBQQ__Quantity__c - SBQQ__PriorQuantity__c + SBQQ__UpgradedQuantity__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective quantity used in computing totals. Same as quantity unless the product is block priced, covered by &quot;Slab&quot; discount schedule, or an existing subscription.</inlineHelpText>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveStartDate__c</fullName>
        <description>Effective start date for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__StartDate__c),
  IF(ISBLANK(SBQQ__Group__r.SBQQ__StartDate__c),SBQQ__Quote__r.SBQQ__StartDate__c,SBQQ__Group__r.SBQQ__StartDate__c),
  SBQQ__StartDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective start date for this subscription.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveSubscriptionTerm__c</fullName>
        <description>Effective term for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__SubscriptionTerm__c),
       IF(ISBLANK(SBQQ__Group__r.SBQQ__SubscriptionTerm__c),SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,SBQQ__Group__r.SBQQ__SubscriptionTerm__c),
       SBQQ__SubscriptionTerm__c
    )</formula>
        <inlineHelpText>Effective term for this subscription.</inlineHelpText>
        <label>Effective Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>Date the service represented by this line item will end (only applies if product is a subscription).</description>
        <inlineHelpText>Date the service represented by this line item will end (only applies if product is a subscription).</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</description>
        <inlineHelpText>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</inlineHelpText>
        <label>Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Favorite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Favorite to which this Quote Line belongs.</description>
        <inlineHelpText>Favorite to which this Quote Line belongs.</inlineHelpText>
        <label>Favorite</label>
        <referenceTo>SBQQ__Favorite__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on the adjusted quote line if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on the adjusted quote line if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GrossProfit__c</fullName>
        <description>Gross profit amount on this line item.</description>
        <inlineHelpText>Gross profit amount on this line item.</inlineHelpText>
        <label>Gross Profit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group to which this line belongs, if any.</description>
        <inlineHelpText>Group to which this line belongs, if any.</inlineHelpText>
        <label>Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>